<resources>
    <string name="base">&quot;BaseText&quot;</string>
    <string name="banner_ad_unit_id">ca-app-pub-8704839960176235/8681406908</string>
    <string name="apk_name">Euro Coins Collection</string>
    <string name="app_name">Euro Coins Collection</string>
    <string name="bt_euro_coins_main">Euro Coins</string>
    <string name="bt_euro_coins_commemorative_main">Commemorative Euro Coins</string>
    <string name="title_countries">Countries</string>
    <string name="bt_save_data">Save</string>
    <string name="toast_data_stored">Collection updated.</string>
    <string name="bt_select_all">Select All</string>
    <string name="subtitleList">Completed</string>
    <string name="sort">Sort...</string>
    <string name="sortPerYear">By Year</string>
    <string name="sortPerCountry">By Country</string>
    <string name="title_commemoratives">Commemorative</string>
    <string name="title_settings">Preferences</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="toast_collection_imported">Collection successfully imported.</string>
    <string name="toast_collection_exported">Collection successfully exported.</string>
    <string name="toast_clear_data">Data successfully deleted.</string>
    <string name="toast_reset_default_data">Default data restored.</string>
    <string name="csv_file_countrie">Country</string>
    <string name="csv_file_year">Year</string>
    <string name="csv_file_value">Value</string>
    <string name="csv_file_state">State</string>
    <string name="csv_file_description">Description</string>
    <string name="settings_section_backup_data">Data Backup</string>
    <string name="settings_section_data_settings">Data Settings</string>
    <string name="settings_section_general">General</string>
    <string name="settings_section_about">About</string>
    <string name="settings_title_csv_export_normal">Export collection</string>
    <string name="settings_title_csv_import_normal">Import collection</string>
    <string name="settings_title_clear_data">Clear data</string>
    <string name="settings_title_reset_to_default">Reset default data</string>
    <string name="settings_title_about">About</string>
    <string name="settings_summary_version">version 2.3</string>
    <string name="settings_title_rate_it">Rate it on Play Store</string>
    <string name="dialog_loading_data_backup">Loading data from backup...</string>
    <string name="dialog_loading_reset_data">Resetting default data...</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">\t\tThis application was developed for all euro coins collectors. For those who wish to have at hand a means of identifying coins or even update the state of the collection.\n\n <b>- Programmer:</b> Rui Branco\n\n <b>- Images and Videos:</b> Iúri Silvestre\n</string>
    <string name="title_rate_it">RATE ON PLAY STORE</string>
    <string name="title_goPro">CHECKOUT PRO VERSION</string>
    <string name="bt_pro_version">Euro Coins Collection Pro</string>
    <string name="menu_settings">Preferences</string>
    <string name="title_menu_settings">Preferences</string>
    <string name="title_menu_statistics">Statistics</string>
    <string name="title_stats_tab1">Countries</string>
    <string name="title_stats_tab2">Commemoratives</string>
    <string name="DEU">Germany</string>
    <string name="AUT">Austria</string>
    <string name="BEL">Belgium</string>
    <string name="CYP">Cyprus</string>
    <string name="SVK">Slovakia</string>
    <string name="SVN">Slovenia</string>
    <string name="ESP">Spain</string>
    <string name="EST">Estonia</string>
    <string name="FIN">Finland</string>
    <string name="FRA">France</string>
    <string name="GRC">Greece</string>
    <string name="IRL">Ireland</string>
    <string name="ITA">Italy</string>
    <string name="LUX">Luxembourg</string>
    <string name="MLT">Malta</string>
    <string name="MCO">Monaco</string>
    <string name="NLD">Netherlands</string>
    <string name="PRT">Portugal</string>
    <string name="SMR">San Marino</string>
    <string name="VAT">Vatican</string>
    <string name="LAT">Latvia</string>
    <string name="LTU">Lithuania</string>
    <string name="AND">Andorra</string>
    <string name="PAE">Euro Area Countries</string>
    <string name="description_2004_FIN">EU enlargement to ten new Member States</string>
    <string name="description_2004_GRC">Olympic Games Athens 2004</string>
    <string name="description_2004_ITA">Fifth decade of the world food programme</string>
    <string name="description_2004_LUX">Effigy and monogram of Grand Duke Henri</string>
    <string name="description_2004_SMR">Bartolomeo Borghesi (historian and numismatist)</string>
    <string name="description_2004_VAT">75th Anniversary of the founding of the State of Vatican City</string>
    <string name="description_2005_AUT">50th anniversary of the Austrian State Treaty</string>
    <string name="description_2005_BEL">Belgo-Luxembourg Economic Union</string>
    <string name="description_2005_ESP">Fourth centenary of the first edition of "Don Quixote" (El Ingenioso Hidalgo Don Quijote de la Mancha) by Miguel de Cervantes</string>
    <string name="description_2005_FIN">60th anniversary of the creation of the United Nations and 50th anniversary of the accession of Finland to the ONU</string>
    <string name="description_2005_ITA">First anniversary of the signing of the European Constitution</string>
    <string name="description_2005_LUX">50th Anniversary of Grand Duke Henri, 5th Anniversary of his ascension to the throne and the centenary of the death of Grand Duke Adolphe</string>
    <string name="description_2005_SMR">International Year of Physics 2005</string>
    <string name="description_2005_VAT">20th World Youth Journey held in Cologne in August 2005</string>
    <string name="description_2006_DEU">Schleswig-Holstein</string>
    <string name="description_2006_BEL">Atomium</string>
    <string name="description_2006_FIN">100th Anniversary of universal suffrage</string>
    <string name="description_2006_ITA">XX Olympic Winter Games - Turin 2006</string>
    <string name="description_2006_LUX">25th birthday of the heir to the throne, Grand Duke Guillaume</string>
    <string name="description_2006_SMR">500th anniversary of the death of Cristóvão Colombo</string>
    <string name="description_2006_VAT">5th centenary of the Pontifical Swiss Guard</string>
    <string name="description_2007_DEU">Mecklenburg-Vorpommern</string>
    <string name="description_2007_FIN">90th anniversary of Finland\'s independence</string>
    <string name="description_2007_LUX">Grand Ducal Palace</string>
    <string name="description_2007_MCO">25th anniversary of the death of Princess Grace</string>
    <string name="description_2007_PAE">50th anniversary of the Treaty of Rome - [NOTE: the graphics of this coin is repeated for each country in the euro currency, changing only the name of the country]</string>
    <string name="description_2007_PRT">Portuguese presidency of the European Union</string>
    <string name="description_2007_SMR">Bicentenary of the birth of Giuseppe Garibaldi</string>
    <string name="description_2007_VAT">80th Birthday of His Holiness Pope Benedict XVI</string>
    <string name="description_2008_DEU">Federal State of Hamburg</string>
    <string name="description_2008_BEL">60th anniversary of the Universal Declaration of Human Rights</string>
    <string name="description_2008_SVN">500th anniversary of the birth of Primož Trubar</string>
    <string name="description_2008_FIN">60th anniversary of the Universal Declaration of Human Rights</string>
    <string name="description_2008_FRA">French Presidency of the EU Council in the second half of 2008</string>
    <string name="description_2008_ITA">60th anniversary of the Universal Declaration of Human Rights</string>
    <string name="description_2008_LUX">Grand Duke Henri and the "Château de Berg"</string>
    <string name="description_2008_PRT">60th anniversary of the Universal Declaration of Human Rights</string>
    <string name="description_2008_SMR">European Year of Intercultural Dialogue</string>
    <string name="description_2008_VAT">Year dedicated to Saint Paul on the occasion of the two thousandth anniversary of his birth</string>
    <string name="description_2009_DEU">Federal State of Saarland</string>
    <string name="description_2009_BEL">200th anniversary of the birth of Louis Braille</string>
    <string name="description_2009_SVK">20th Birthday of November 17, 1989 (Day of Struggle for Freedom and Democracy)</string>
    <string name="description_2009_FIN">200th anniversary of Finnish autonomy and the Diet of Porvoo</string>
    <string name="description_2009_ITA">200th anniversary of the birth of Louis Braille</string>
    <string name="description_2009_LUX">The Grand Duke Henri and Grand Duchess Charlotte</string>
    <string name="description_2009_PAE">10th anniversary of Economic and Monetary Union - [NOTE: the graphics of this coin is repeated for each country in the euro currency, changing only the name of the country]</string>
    <string name="description_2009_PRT">2nd Lusophone Games</string>
    <string name="description_2009_SMR">European Year of Creativity and Innovation</string>
    <string name="description_2009_VAT">International Year of Astronomy</string>
    <string name="description_2010_DEU">Federal State of Bremen</string>
    <string name="description_2010_BEL">Belgian Presidency of the European Union in 2010</string>
    <string name="description_2010_SVN">200th anniversary of the Botanical Garden of Ljubljana</string>
    <string name="description_2010_ESP">Historic center of Cordoba - series dedicated to the UNESCO World Heritage</string>
    <string name="description_2010_FIN">Decree of 1860 which gave Finland the right to issue banknotes and coins</string>
    <string name="description_2010_FRA">70th anniversary of the Appeal of 18 June</string>
    <string name="description_2010_GRC">2500th anniversary of the Battle of Marathon</string>
    <string name="description_2010_ITA">200th anniversary of the birth of the Count of Cavour</string>
    <string name="description_2010_LUX">Coat of Grand Duke</string>
    <string name="description_2010_PRT">100th anniversary of the Portuguese Republic</string>
    <string name="description_2010_SMR">500th anniversary of the death of Sandro Botticelli</string>
    <string name="description_2010_VAT">Year for Priests</string>
    <string name="description_2011_DEU">Federal State of North Rhine-Westphalia</string>
    <string name="description_2011_BEL">100th anniversary of International Women\'s Day</string>
    <string name="description_2011_SVK">20th anniversary of the creation of the Visegrád Group</string>
    <string name="description_2011_SVN">100th anniversary of the birth of Franc Rozman-Stane</string>
    <string name="description_2011_ESP">Patio of the Lions - Granada series devoted to the UNESCO World Heritage</string>
    <string name="description_2011_FIN">200th anniversary of Suomen Pankki - Finlands Bank</string>
    <string name="description_2011_FRA">30th anniversary of the Festival of Music</string>
    <string name="description_2011_GRC">Special Olympics World Summer Games - Athens 2011</string>
    <string name="description_2011_ITA">150th anniversary of the unification of Italy</string>
    <string name="description_2011_LUX">50th anniversary of the appointment by the Grand Duchess Charlotte of her son Jean as lieutenant-représentant</string>
    <string name="description_2011_MLT">Constitutional history - first election of representatives in 1849</string>
    <string name="description_2011_MCO">Marriage of Prince Albert and Charlene</string>
</resources>