<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <ImageView
        android:id="@+id/iv_dialog"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/base"
        android:src="@drawable/moedas_euro_logo"
        android:layout_below="@+id/tv_dialogTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="30dp" />

    <TextView
        android:id="@+id/tv_dialog_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_dialog"
        android:padding="10dp"
        android:text="@string/settings_title_rate_it"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_about"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/iv_icon"
        android:isIndicator="true"
        android:rating="5" />

    <Button
        android:id="@+id/bt_dialog_rate_it"
        android:layout_below="@+id/ratingBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawablePadding="10dp"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/icon_play_store"
        android:text="@string/app_name"
        android:textColor="@color/colorTextView_white"
        android:theme="@style/MyButton" />
</RelativeLayout>
