<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moedas.euro.free.AboutActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView1"
                android:layout_below="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/dialog_about_message"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_below="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="20dp"
                android:text="@string/title_rate_it"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/line1"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_below="@+id/textView3"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/bt_rate_it"
                android:layout_below="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawablePadding="10dp"
                android:paddingTop="12dp"
                android:drawableLeft="@drawable/icon_play_store"
                android:text="@string/app_name"
                android:textColor="@color/colorTextView_white"
                android:theme="@style/MyButton" />

            <TextView
                android:id="@+id/textView4"
                android:layout_below="@+id/bt_rate_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/title_goPro"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/line2"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_below="@+id/textView4"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/bt_goPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:layout_centerHorizontal="true"
                android:padding="0dp"
                android:drawableLeft="@drawable/get_it_play_store" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/bt_goPro" />

        </RelativeLayout>
    </ScrollView>

    <!--<com.google.android.gms.ads.AdView-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--ads:adSize="BANNER"-->
        <!--ads:adUnitId="@string/banner_ad_unit_id">-->
    <!--</com.google.android.gms.ads.AdView>-->

</RelativeLayout>
